--- a/package.json
+++ b/package.json
@@ -4,15 +4,32 @@
     "description": "Help Pidgey avoid Pokeballs!",
     "main": "src/index.html",
     "author": "calvincu1230",
-    "license": "MIT",
+    "license": "ISC",
+    "browserslist": [
+        "last 1 version",
+        "> 1%",
+        "maintained node versions",
+        "not dead"
+    ],
     "scripts": {
-        "start": "parcel index.html",
-        "build": "parcel build index.html"
+        "start": "webpack-dev-server --config webpack.dev.js",
+        "webpack:watch": "webpack --watch --config webpack.dev.js",
+        "webpack:build": "webpack --config webpack.prod.js  --optimize-minimize"
     },
     "dependencies": {
-        "phaser": "3.24.1"
-    },
-    "devDependencies": {
-        "parcel-bundler": "1.12.4"
+        "phaser": "3.24.1",
+        "@babel/core": "^7.8.6",
+        "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+        "@babel/preset-env": "^7.8.6",
+        "autoprefixer": "^9.7.4",
+        "babel-loader": "^8.0.6",
+        "fibers": "^4.0.2",
+        "file-loader": "^5.1.0",
+        "style-loader": "^1.1.3",
+        "url-loader": "^3.0.0",
+        "webpack": "^4.42.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3",
+        "webpack-merge": "^4.2.2"
     }
 }
